fixed alignment issue inside cart component

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,5 @@ body, html{
 #root{
     display: flex;
     flex-direction: column;
-    height: 100vh;
     justify-content: space-between;
 }
